Added status to spec
